resave layer after column name adjustment

--- a/prep/sp/ico/v2020/ico_data_prep.Rmd
+++ b/prep/sp/ico/v2020/ico_data_prep.Rmd
@@ -400,7 +400,8 @@ ico_status <- ico_spp_scores %>%
   group_by(year, region_id) %>%
   summarize(mean_cat = round(mean(cat_score, na.rm = TRUE), 5), 
             ico_status = (1 - mean_cat)) %>% 
-  ungroup()
+  ungroup() %>% 
+  dplyr::select(-mean_cat)
 ```
 
 # Save to Toolbox
