column headers to match scores

--- a/prep/sp/ico/v2020/ico_data_prep.Rmd
+++ b/prep/sp/ico/v2020/ico_data_prep.Rmd
@@ -399,7 +399,7 @@ ico_status <- ico_spp_scores %>%
   rename(region_id = rgn_id) %>% 
   group_by(year, region_id) %>%
   summarize(mean_cat = round(mean(cat_score, na.rm = TRUE), 5), 
-            ico_status = (1 - mean_cat)) %>% 
+            status = (1 - mean_cat)) %>% 
   ungroup() %>% 
   dplyr::select(-mean_cat)
 ```
