Update status equation

--- a/prep/bd/spp/v2020/spp_data_prep.Rmd
+++ b/prep/bd/spp/v2020/spp_data_prep.Rmd
@@ -331,7 +331,7 @@ spp_status <- spp_info %>%
   filter(!is.na(cat_score)) %>%
   distinct() %>% 
   mutate(region_id = 1,
-         status = (1 - cat_score),
+         status = cat_score,
          year = 2020) %>% # need a year for toolbox to run
   dplyr::select(region_id, sciname, common, status, year)
 ```
